add repositories and services